--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "emailjs-com": "^3.2.0",
+    "html-webpack-plugin": "^5.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.3",
     "roma-padel": "file:",
+    "slick-carousel": "^1.8.1",
     "smooth-scroll": "^16.1.3",
     "web-vitals": "^2.1.4"
   },
